--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
         <div class="msg-bubble">
           <div class="msg-info">
-            <div class="msg-info-name">Bernault [Chatbot]</div>
+            <div class="msg-info-name">MRQ_ [Chatbot]</div>
             <div class="msg-info-time">Now</div>
           </div>
 
