--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
     <main class="msger-chat">
       <div class="msg left-msg">
-        <div class="msg-img" style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"></div>
+        <div class="msg-img" style="background-image: url(../static/images/bot.png"></div>
 
         <div class="msg-bubble">
           <div class="msg-info">
@@ -31,7 +31,7 @@
           </div>
 
           <div class="msg-text">
-            Hi, I am Bernault! Happy to assist you with any queries you have. 😀
+            Hi, I am MRQ_! Happy to assist you with any question you have about Rwanda Utility and Regulatory Authority.😀
           </div>
         </div>
       </div>
@@ -53,9 +53,9 @@
 
 
     // Icons made by Freepik from www.flaticon.com
-    const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
-    const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
-    const BOT_NAME = "    ChatBot";
+    const BOT_IMG = "../static/images/bot.png";
+    const PERSON_IMG = "../static/images/user.png";
+    const BOT_NAME = "MRQ_ ChatBot";
     const PERSON_NAME = "You";
 
     msgerForm.addEventListener("submit", event => {
