--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="msg-text">
-            Hi, I am MRQ_! Happy to assist you with any question you have about Rwanda Utility and Regulatory Authority.😀
+            Hi, I am Murasa! Happy to assist you with any question you have about Rwanda Utility and Regulatory Authority.😀
           </div>
         </div>
       </div>
